--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="main.js">
-        
-    </script>
+
+
+    <script src="main.js"></script>
 </body>
 </html>
