Created basic UI for game loop

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-
+    <div class="container">
+        <h1 class="intro-text">Hello and welcome to Rock, Paper, Scissors!</h1>
+        <h2 class="instructions">Choose an option below!</h2>
+        <div class="button-container">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+        <h2 class="results"></h2>
+    </div>
 
     <script src="main.js"></script>
 </body>
