Added sections for displaying user & CPU choices

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <button class="paper">Paper</button>
             <button class="scissors">Scissors</button>
         </div>
+        <div class="selection-container">
+            <h2 class="player-selection"></h2>
+            <h2 class="computer-selection"></h2>
+        </div>
         <h2 class="results"></h2>
     </div>
 
