--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="intro-text">Hello and welcome to Rock, Paper, Scissors!</h1>
+        <h1 class="intro-text">Rock, Paper, Scissors</h1>
         <h2 class="instructions">Choose an option below!</h2>
         <div class="button-container">
             <button class="rock">Rock</button>
