--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1 class="intro-text">Rock, Paper, Scissors</h1>
         <h2 class="instructions">Choose an option below!</h2>
+        <h3 class="point-counter">Points: 0</h3>
         <div class="button-container">
             <button class="rock">Rock</button>
             <button class="paper">Paper</button>
