Refactored code and added play again button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <h2 class="player-selection"></h2>
             <h2 class="computer-selection"></h2>
         </div>
-        <h2 class="results"></h2>
+        <h3 class="results"></h3>
+        <button class="play-again">Play again</button>
     </div>
 
     <script src="main.js"></script>
