--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div class="container">
         <h1 class="intro-text">Rock, Paper, Scissors</h1>
         <h2 class="instructions">Choose an option below!</h2>
-        <h3 class="point-counter">Points: 0</h3>
+        <h2 class="point-counter">Points: 0</h2>
         <div class="button-container">
             <button class="rock">Rock</button>
             <button class="paper">Paper</button>
@@ -20,8 +21,8 @@
             <h2 class="player-selection"></h2>
             <h2 class="computer-selection"></h2>
         </div>
-        <h3 class="results"></h3>
-        <button class="play-again">Play again</button>
+        <h2 class="results"></h2>
+        <button class="play-again hidden">Play again</button>
     </div>
 
     <script src="main.js"></script>
